--- a/index.html
+++ b/index.html
@@ -244,11 +244,20 @@
                     <h4>💡 Como funciona:</h4>
                     <ol>
                         <li>Clique no seu banco acima</li>
-                        <li>O app/site do banco abrirá automaticamente</li>
+                        <li>Escolha como quer pagar (app ou site)</li>
                         <li>Cole a chave PIX e digite o valor</li>
                         <li>Complete o pagamento</li>
                         <li>Volte aqui e confirme o pagamento</li>
                     </ol>
+                    
+                    <div class="mobile-tips">
+                        <h5>📱 Dicas para Mobile:</h5>
+                        <ul>
+                            <li>Se o app não abrir, escolha "Abrir site"</li>
+                            <li>A chave PIX será copiada automaticamente</li>
+                            <li>Você pode colar diretamente no app do banco</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             
