--- a/index.html
+++ b/index.html
@@ -137,10 +137,13 @@
                             <button type="button" class="copy-btn" onclick="copyPixCode()">
                                 📋 Copiar Código PIX
                             </button>
+                            <button type="button" class="copy-btn" onclick="copyPixKey()">
+                                🔑 Copiar CPF
+                            </button>
                         </div>
                         
                         <div class="pix-info">
-                            <small>O código PIX contém todos os dados necessários para o pagamento</small>
+                            <small><strong>Código PIX:</strong> Cole no app do banco | <strong>Chave PIX (CPF):</strong> Digite manualmente</small>
                         </div>
                         
                         <div style="font-size: 0.85rem; opacity: 0.9; margin-top: 12px;">
